Fix width of items in collapsed navbar

--- a/scss/bootstrap/_navbar.scss
+++ b/scss/bootstrap/_navbar.scss
@@ -56,6 +56,7 @@
   box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
   @include clearfix();
   -webkit-overflow-scrolling: touch;
+  width: 100%;
 
   &.in {
     overflow-y: auto;
